syntax="proto3";

package backend.service;

import "models.proto";

option go_package= "backendpb";

service Backend {
  rpc Signup(SignupRequest) returns (SignupResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc PublicProfile(ProfileRequest) returns (ProfileResponse);
}

message Empty{}

message SignupRequest {
  string Email = 1;
  string Password = 2;
  string Username = 3;
  string FirstName = 4;
  string LastName = 5;
  string CurrentSchool = 6;
}

message SignupResponse {
  string UUID = 1;
}

message LoginRequest{
  string Identifier = 1;
  string Challenge = 2;
}

message LoginResponse{
  string Name = 1;
}

message ProfileRequest{
  string Username = 1;
  string Viewer = 2;
}

message ProfileResponse{
  backend.models.Profile UserData = 1;
}